--- a/index.html
+++ b/index.html
@@ -22,14 +22,19 @@
     />
 
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-EX7BCM5TK9"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-EX7BCM5TK9"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-EX7BCM5TK9');
-</script>
+      gtag("config", "G-EX7BCM5TK9");
+    </script>
   </head>
   <body>
     <div id="root"></div>
